--- a/sections/collection-body.liquid
+++ b/sections/collection-body.liquid
@@ -360,6 +360,7 @@
                                     <div class="collection-control__button-sidebar d-flex align-items-center cursor-pointer js-popup-button" data-js-popup-button="sidebar">
                                         <i class="mr-5">{% render 'icon-theme-084' %}</i>
                                         {{ 'collections.control.button_sidebar' | t }}
+                                        <i class="ml-5">{% render 'icon-theme-188' %}</i>
                                     </div>
                                 </div>
                                 {%- if settings.collection_sidebar_position == 'top' -%}
