--- a/sections/one-product.liquid
+++ b/sections/one-product.liquid
@@ -171,8 +171,7 @@
                     {%- endif -%}
                     {%- if show_vendor -%}
                       <div class="one-product-info__vendor{% if vendor == blank %} d-none-important{% endif %} mb-5">
-                        <p class="m-0" data-js-product-vendor>{{ 'products.product.vendor' | t }}:
-                          <span>{{ vendor }}</span></p>
+                        <p class="m-0" data-js-product-vendor><span>{{ vendor }}</span></p>
                       </div>
                     {%- endif -%}
                   </div>
