--- a/snippets/product-page-get-tabs.liquid
+++ b/snippets/product-page-get-tabs.liquid
@@ -327,7 +327,7 @@
                 {%- if show_tab_description and description_place == 'tabs' and description != blank -%}
                     <div{% if active_tab %} class="active"{% endif %} data-js-tabs-tab>
                         <span data-js-tabs-btn-mobile>{{ 'products.product.tabs.description' | t }} <i>{% render 'icon-theme-188' %}</i></span>
-                        <div class="tabs__content rte overflow-hidden" data-js-tabs-content{% if active_tab %} style="display: block;"{% assign active_tab = null %}{% endif %}>
+                        <div class="tabs__content description rte overflow-hidden" data-js-tabs-content{% if active_tab %} style="display: block;"{% assign active_tab = null %}{% endif %}>
                             {% include 'parse-for-icons' content: description %}
                         </div>
                     </div>
