--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -205,6 +205,7 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
   // Collection List Styling
   .label {
     line-height: unset;
+    font-weight: bold;
     font-family: $font-sans-logo;
     height: unset;
     padding: 2px 6px 1px;
