--- a/snippets/collection-filters-pagination.liquid
+++ b/snippets/collection-filters-pagination.liquid
@@ -23,7 +23,7 @@
                     <span>{{ 'layout.paginate.load_more' | t }}</span>
                 </a>
             {%- else -%}
-                <div class="btn" disabled="disabled">
+                <div class="btn no-product" disabled="disabled">
                     <span>{{ 'layout.paginate.no_more_products' | t }}</span>
                 </div>
             {%- endif -%}
@@ -36,7 +36,7 @@
                     <span>{{ 'layout.paginate.infinite_scroll' | t }}</span>
                 </a>
             {%- else -%}
-                <div class="btn" disabled="disabled">
+                <div class="btn no-product" disabled="disabled">
                     <span>{{ 'layout.paginate.no_more_products' | t }}</span>
                 </div>
             {%- endif -%}
