--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -8,7 +8,7 @@
           <span>{{ 'layout.paginate.load_more' | t }}</span>
         </a>
       {%- else -%}
-        <div class="btn" disabled="disabled">
+        <div class="btn no-product" disabled="disabled">
           <span>{{ 'layout.paginate.no_more_products' | t }}</span>
         </div>
       {%- endif -%}
@@ -20,7 +20,7 @@
           <span>{{ 'layout.paginate.infinite_scroll' | t }}</span>
         </a>
       {%- else -%}
-        <div class="btn" disabled="disabled">
+        <div class="btn no-product" disabled="disabled">
           <span>{{ 'layout.paginate.no_more_products' | t }}</span>
         </div>
       {%- endif -%}
