--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -40,7 +40,7 @@
   {% section 'product-variants' %}
 {%- endif -%}
 {% section 'header' %}
-<main id="MainContent" class="blancsom-theme">
+<main id="MainContent">
   {{ content_for_layout }}
 </main>
 {% section 'footer' %}
