Header Search & Cart btn

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -279,6 +279,12 @@ $screen-xl-up: 1260px;
         border-color: #fff;
       }
     }
+    .header__btn-cart {
+      margin-top: -5px;
+      i {
+        margin-top: 1px;
+      }
+    }
   }
   // Designers List
   #designersList {
