--- a/templates/page.designers.liquid
+++ b/templates/page.designers.liquid
@@ -1,7 +1,7 @@
 {% include 'global-variables' %} 
 {% include 'breadcrumbs' %}
 <div class="container mb-60">
-    <h1 class="h3 mt-30 text-center">{{ page.title }}</h1>
+    <h1 class="h3 mt-30 page-title">{{ page.title }}</h1>
     <div class="rte">
         {% include 'parse-for-icons' content: page.content %}
     </div>
