--- a/snippets/promobox.liquid
+++ b/snippets/promobox.liquid
@@ -1105,7 +1105,14 @@
                         {{ pages[custom_html].content }}
                     {%- else -%}
                         {%- if text_line_1 != blank -%}
-                            {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-1 h4 h3-sm">{{ text_line_1 }}</p>{% if url != blank %}</a>{% endif %}
+                        {%- if text_line_3 != blank -%}
+                        <div class="promobox__text-row">
+                            <span class="promobox__text-3">{{ text_line_3 }}</span>
+                            <span class="promobox__text-1">{{ text_line_1 }}</span>
+                        </div>
+                        {%- else -%}
+                        {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-1 h6{% if url != blank %} text-underline-hover{% endif %}">{{ text_line_1 }}</p>{% if url != blank %}</a>{% endif %}
+                        {%- endif -%}
                         {%- endif -%}
                         {%- if text_line_2 != blank -%}
                             {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-2{% if text_line_1 != blank %} mt-5{% endif %}{% if url != blank %} text-underline-hover{% endif %}">{{ text_line_2 }}</p>{% if url != blank %}</a>{% endif %}
@@ -1125,8 +1132,15 @@
                     {%- if custom_html != blank -%}
                         {{ pages[custom_html].content }}
                     {%- else -%}
-                        {%- if text_line_1 != blank -%}
-                            {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-1 h6{% if url != blank %} text-underline-hover{% endif %}">{{ text_line_1 }}</p>{% if url != blank %}</a>{% endif %}
+                    {%- if text_line_1 != blank -%}
+                    {%- if text_line_3 != blank -%}
+                    <div class="promobox__text-row">
+                        <span class="promobox__text-3">{{ text_line_3 }}</span>
+                        <span class="promobox__text-1">{{ text_line_1 }}</span>
+                    </div>
+                    {%- else -%}
+                    {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-1 h6{% if url != blank %} text-underline-hover{% endif %}">{{ text_line_1 }}</p>{% if url != blank %}</a>{% endif %}
+                    {%- endif -%}
                         {%- endif -%}
                         {%- if text_line_2 != blank -%}
                             {% if url != blank %}<a href="{{ url }}">{% endif %}<p class="promobox__text-2{% if text_line_1 != blank %} mt-5{% endif %}">{{ text_line_2 }}</p>{% if url != blank %}</a>{% endif %}
