--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -439,6 +439,8 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
         .promobox__text-3 {
           padding-right: 8px;
           font-size: 0.9rem;
+          display: inline-block;
+          min-width: 64px;
         }
       }
       .promobox__text-1,
